trunk/Archive2/8f/8b9cf546450971/output
main.cpp:6:1: warning: data definition has no type or storage class [enabled by default]
 ptr =  strchr(str, 'W');
 ^
main.cpp:6:1: warning: type defaults to ‘int’ in declaration of ‘ptr’ [enabled by default]
main.cpp:6:1: error: conflicting types for ‘ptr’
main.cpp:4:7: note: previous declaration of ‘ptr’ was here
 char *ptr;
       ^
main.cpp:6:1: error: initializer element is not constant
 ptr =  strchr(str, 'W');
 ^
main.cpp:7:8: error: expected declaration specifiers or ‘...’ before string constant
 printf("%s\n", ptr);
        ^
main.cpp:7:16: error: expected declaration specifiers or ‘...’ before ‘ptr’
 printf("%s\n", ptr);
                ^
