trunk/Archive2/8f/8b9cf546450971/main.cpp
#include <string.h>
#include <stdio.h>
char str[] = "Hello World";
char *ptr;

ptr =  strchr(str, 'W');
printf("%s\n", ptr);